<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_pantalla"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_historial"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_root"
        app:layout_constraintTop_toBottomOf="@id/labelTitulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/inputComando"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comando"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/checkRoot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/inputSalida"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/hint_salida"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:minLines="6"
        app:layout_constraintTop_toBottomOf="@id/inputComando"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAnalizar"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/buttonAnalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_analizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textAnalisis"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/textAnalisis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_analisis"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textSugerencias" />

    <TextView
        android:id="@+id/textSugerencias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_sugerencias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
